# skipline

./: .gitignore  CLAUDE.md  Makefile  README.md  render.yaml
.maestro/: add-to-cart.yml  checkout-flow.yml  config.yaml  continuous-user-simulation.yml  debug-products.yml  fix-wait-commands.sh  full-test-suite.yml  home.yml  run-tests.sh  run-user-simulations.sh  stress-test.yml  test-timeout.yml
.maestro/user-behaviors/: README.md  browse-only.yml  cart-abandonment.yml  comprehensive-user-simulation.yml  error-scenarios.yml  error-simulation.yml  happy-path-purchase.yml  power-user.yml  price-conscious-shopper.yml  product-interactions.yml  quick-purchase.yml  test-product-buttons.yml
backend/: .env-example  .env.example  DEPLOYMENT.md  Makefile  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
backend/app/: db.py  db_config.py  main.py  models.py  schemas.py
backend/app/routers/: v1.py  v2.py
backend/app/services/: external.py  inventory.py  pricing.py
backend/scripts/: db_manager.py  seed.py  seed_once.py
backend/skipline_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: 00-overview.md  01-backend-setup.md  02-mobile-setup.md  03-demo-script.md  04-troubleshooting.md  05-sentry-cli.md  06-mobile-notes.md  07-image-performance.md  08-sentry-logs.md  08-tracing-setup.md  09-recent-updates.md  10-performance-comparison.md
mobile/: .env-example  .env.example  .gitignore  app.json  eas.json  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile/app/: _layout.tsx  checkout.tsx  (+1 more)
mobile/lib/: api.ts
(+15 files in other folders)
